--- a/task.html
+++ b/task.html
@@ -23,10 +23,9 @@
     <div class="container">
         
          <div class="footer-title">
-                 <ul class="footer-list">
-                     <li class="footer-item" ><p class="footer-text-small" >homemade ice cream made</p></li>
-                     <li class="footer-item"><p class="footer-text-big ">with passion</p></li>
-                 </ul>
+            <p class="footer-text-small" >homemade ice cream made</p>
+            <p class="footer-text-big ">with passion</p>
+               
          </div>
 
 
@@ -64,7 +63,9 @@
         <p class="footer-title">© 2022 - IceCream. All Rights Reserved.</p>
 
     </div>
-   
+
+
+  
  </footer>
 </body>
 </html>
