--- a/task.html
+++ b/task.html
@@ -66,8 +66,8 @@
             <a class="tel-num" href="tel:+61(0)383766284"> +61(0)383 766 284</a> 
         </div>
 <!--LINE-->
-        <div class="end">
-            <hr style="border:border 1px solid #000;" />
+        <div >
+            <hr  class="end" style="border:border 1px solid #000;" />
          
             <p class="footer-title_end">© 2022 - IceCream. All Rights Reserved.</p>
         </div>  
