--- a/task.html
+++ b/task.html
@@ -31,7 +31,7 @@
 
 
             <div class="footer_contact">
-             <ul class="footer-soc-list">
+                <ul class="footer-soc-list">
                <li class="footer_soc_item">
                 
                 <!--a href="" class="social-link">
@@ -61,10 +61,11 @@
                     </svg>
                 </a>
                </li>
-             </ul>
-        
-             <span class="tel-text"> Feel free to contact</span>
-             <a class="tel-num" href="tel:+61(0)383766284"> +61(0)383 766 284</a> 
+                </ul>
+                 <div class="tel">
+                    <span class="tel-text"> Feel free to contact</span>
+                    <a class="tel-num" href="tel:+61(0)383766284"> +61(0)383 766 284</a> 
+                </div> 
             </div>
         </div>
     </div>
